--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "remark-footnotes": "^4.0.0",
     "remark-gfm": "^2.0.0",
     "remark-math": "^5.0.0",
+    "sass": "^1.43.2",
     "sharp": "^0.28.3",
+    "styled-components": "^5.3.1",
     "tailwindcss": "^2.2.2",
     "unist-util-visit": "^4.0.0"
   },
